--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,20 @@
         <junit.version>5.9.2</junit.version>
         <mockito.version>5.2.0</mockito.version>
         <slf4j.version>2.0.7</slf4j.version>
+        
+        <!-- SonarQube Properties -->
+        <sonar.projectKey>com.example:motion-system</sonar.projectKey>
+        <sonar.organization>example-org</sonar.organization>
+        <sonar.host.url>http://localhost:9000</sonar.host.url>
+        <sonar.login>${env.SONAR_TOKEN}</sonar.login>
+        <sonar.java.source>${java.version}</sonar.java.source>
+        <sonar.java.target>${java.version}</sonar.target>
+        <sonar.coverage.jacoco.xmlReportPaths>
+            ${project.reporting.outputDirectory}/jacoco/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.junit.reportPaths>
+            ${project.build.directory}/surefire-reports
+        </sonar.junit.reportPaths>
     </properties>
 
     <dependencies>
@@ -96,6 +110,43 @@
                 </configuration>
             </plugin>
 
+            <!-- JaCoCo Plugin for code coverage -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.10</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- SonarQube Plugin -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sonar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- JAR Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -138,4 +189,23 @@
             </plugin>
         </plugins>
     </build>
+
+    <!-- Profile für SonarQube-Analyse -->
+    <profiles>
+        <profile>
+            <id>sonar</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <!-- Optional: Erweiterte SonarQube-Einstellungen -->
+                <sonar.tests>${project.basedir}/src/test/java</sonar.tests>
+                <sonar.sources>${project.basedir}/src/main/java</sonar.sources>
+                <sonar.java.binaries>${project.build.directory}/classes</sonar.java.binaries>
+                <sonar.java.test.binaries>${project.build.directory}/test-classes</sonar.java.test.binaries>
+                <sonar.java.libraries>${project.build.directory}/dependency/*.jar</sonar.java.libraries>
+                <sonar.verbose>true</sonar.verbose>
+            </properties>
+        </profile>
+    </profiles>
 </project>
