--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,6 @@
 {
     "name": "Java Motion System Development",
     "dockerFile": "Dockerfile",
-    
     "customizations": {
         "vscode": {
             "extensions": [
@@ -38,20 +37,16 @@
             }
         }
     },
-
     "forwardPorts": [],
-
     "remoteUser": "vscode",
-
     "mounts": [
         "source=${localEnv:HOME}${localEnv:USERPROFILE}/.m2,target=/home/vscode/.m2,type=bind,consistency=cached"
     ],
-
     "runArgs": [
         "--cap-add=SYS_PTRACE",
-        "--security-opt", "seccomp=unconfined"
+        "--security-opt",
+        "seccomp=unconfined"
     ],
-
     "features": {
         "ghcr.io/devcontainers/features/java:1": {
             "version": "17",
@@ -60,9 +55,7 @@
         },
         "ghcr.io/devcontainers/features/docker-in-docker:2": {}
     },
-
-    "postCreateCommand": "mvn install -DskipTests",
-
+    "postCreateCommand": "mvn install -DskipTests -Dsonar.skip=true",
     "remoteEnv": {
         "JAVA_HOME": "/usr/lib/jvm/msopenjdk-17",
         "MAVEN_HOME": "/usr/share/maven"
