Fix build error by specifying main class
---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/scimbe/ExampleLayerInMotion?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <mainClass>com.example.motion.MotionSystemApplication</mainClass>
                 </configuration>
             </plugin>
 
