Update SonarQube configuration to disable automatic execution

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,9 @@ sonar.organization=example-org
 sonar.host.url=http://localhost:9000
 sonar.login=${env.SONAR_TOKEN}
 
+# Nur aktivieren, wenn SonarQube-Server läuft
+sonar.skip=true
+
 # Source code settings
 sonar.sources=src/main/java
 sonar.java.source=17
