--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Server Configuration
 server.port=8080
-server.servlet.context-path=/api
+server.servlet.context-path=/
 
 # Spring Boot Configuration
 spring.application.name=motion-system
